clang/test/BSC/Negative/Trait/r3/trait_redefintion/trait_redefintion.cbs

// RUN: %clang_cc1 -fsyntax-only -verify %s

trait F { // expected-note {{previous definition is here}}
  int foo(This* this); 
};

trait F { // expected-error {{redefinition of 'F'}}
  int foo(This* this); 
};